--- a/HYNewNest/Features(主代码)/VIPComponent/View/VIPChartDSBCell.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/View/VIPChartDSBCell.xib
@@ -65,6 +65,12 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="lbBetAmount" destination="zE1-w6-5cF" id="HfV-MX-8Mx"/>
+                <outlet property="lbDepositAmount" destination="uFD-9s-Uzn" id="Fsk-Oj-26I"/>
+                <outlet property="lbLevelName" destination="R2T-a2-0z3" id="uWd-BG-EBj"/>
+                <outlet property="lbUsrName" destination="Ikr-Fq-Kgl" id="F5K-gj-Z57"/>
+            </connections>
             <point key="canvasLocation" x="132" y="113"/>
         </tableViewCell>
     </objects>
