--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNStatementView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNStatementView.xib
@@ -40,7 +40,7 @@
                             <rect key="frame" x="30" y="74.5" width="285" height="241.5"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             <mutableString key="text">欢迎使用币游服务协议！
-      为使用币游的服务，您应当阅读并遵守《服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制腾讯责任的条款、对用户权利进行限制的条款、约定争议解决方式和司法管辖的条款（如第十八条相关约定）等，以及开通或使用某项服务的单独协议或规则。限制、免责条款或者其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。
+      为使用币游的服务，您应当阅读并遵守《服务协议》（以下简称“本协议”）。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制币游责任的条款、对用户权利进行限制的条款、约定争议解决方式和司法管辖的条款（如第十八条相关约定）等，以及开通或使用某项服务的单独协议或规则。限制、免责条款或者其他涉及您重大权益的条款可能以加粗、加下划线等形式提示您重点注意。
 一、【协议的范围】
       1.1本协议是用户与币游之间关于其使用币游的服务所订立的协议。“币游”是指币游和/或其相关服务可能存在的运营关联单位。“用户”是指币游的服务的使用人，在本协议中更多地称为“您”。
 
