--- a/HYNewNest/Features(主代码)/VIPComponent/View/VIPNewVersionView.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/View/VIPNewVersionView.xib
@@ -77,7 +77,7 @@
                     </constraints>
                     <string key="text">福利加码
 赌尊降临</string>
-                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
