feat: 1.百家乐大师赛进游戏；2.替换邀请好友banner； fix: 1.切换环境重新获取游戏线路，H5/CDN域名；2.VIP2.0弹窗文字受黑暗模式影响

--- a/HYNewNest/Features(主代码)/VIPComponent/View/VIPNewVersionView.xib
+++ b/HYNewNest/Features(主代码)/VIPComponent/View/VIPNewVersionView.xib
@@ -77,7 +77,7 @@
                     </constraints>
                     <string key="text">福利加码
 赌尊降临</string>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
